--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,26 @@ a.more {
     margin-right: 15px;
   }
 }
+/* Mengatur ukuran gambar agar lebih kecil pada layar kecil */
+@media (max-width: 820px) {
+  .hero-img-wrap img {
+    width: 100%; /* Gambar akan memenuhi lebar kolom */
+    height: auto; /* Mengatur tinggi gambar secara proporsional */
+  }
+  .hero {
+    margin-top: 45px; /* Adjust this value as needed */
+  }
+}
+@media (max-width: 430px) {
+  .hero-img-wrap img {
+    width: 100%; /* Gambar akan memenuhi lebar kolom */
+    height: auto; /* Mengatur tinggi gambar secara proporsional */
+  }
+  .hero {
+    margin-top: 45px; /* Adjust this value as needed */
+  }
+}
+
 .custom-navbar .custom-navbar-nav li a {
   font-weight: 500;
   color: #ffffff !important;
