--- a/css/style.css
+++ b/css/style.css
@@ -933,7 +933,7 @@ textarea {
   /* background-color: #3b5d50; */
   /* Dropdown list Visi Misi  */
 .accordion-button {
-  border-radius: 10px;
+  /* border-radius: 10px; */
   /* margin-bottom: 10px; */
   background-color: #3b5d50;
   color: #fff;
