--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ a {
   color: #2f2f2f;
   text-decoration: underline;
 }
+a.no-decoration {
+  text-decoration: none;
+}
 a:hover {
   color: #2f2f2f;
   text-decoration: none;
